# EngineProject

./: .gitignore  CMakeLists.txt  CMakePresets.json  EngineProject.sln  Example_Proj.proj  README.md  imgui.ini
.github/agents/: CodingAssistant.agent.md  cost-estimator.agent.md  debugger.agent.md  executor.agent.md  pipeline.agent.md  planner.agent.md  refactor.agent.md  research.agent.md
Assets/Scenes/: .gitkeep  default.scene
Assets/Scripts/: Rotate.cpp  Rotate.h
Editor/: Main.cpp
Engine/: pch.h
Engine/Core/: Object.cpp  Object.h  Project.h  ProjectLoader.cpp  ProjectLoader.h  SceneManager.cpp  SceneManager.h  Script.h  Window.cpp  Window.h  component.h
Engine/Core/Assets/Scenes/: default.scene
Engine/Core/Assets/Scripts/: Rotate.cpp  Rotate.h
Engine/Core/Compoonents/: Camera.cpp  Camera.h  Material.cpp  Material.h  MaterialComponent.h  Mesh.cpp  Mesh.h  MeshComponent.cpp  MeshComponent.h  Transform.cpp  Transform.h
Engine/Core/Graphics/: IGraphicsBuffer.h  IGraphicsContext.h  IGraphicsProvider.h  IPipelineState.h  IShader.h
Engine/Core/Object/: Object.cpp  Object.h
Engine/Core/Renderers/: IEditorRenderer.h  IGameRenderer.h  IRenderer.h  IView.h  RendererFactory.cpp  RendererFactory.h
Engine/Core/Renderers/DX11/: D3D11View.cpp  D3D11View.h  DX11EditorRenderer.cpp  DX11EditorRenderer.h  DX11GameRenderer.cpp  DX11GameRenderer.h  DX11GraphicsBuffer.cpp  DX11GraphicsBuffer.h  DX11GraphicsContext.cpp  DX11GraphicsContext.h  DX11GraphicsProvider.cpp  DX11GraphicsProvider.h  DX11PipelineStateBuilder.cpp  DX11PipelineStateBuilder.h  DX11ShaderCompiler.cpp  DX11ShaderCompiler.h
Engine/Core/Renderers/DX12/: D3D12View.cpp  D3D12View.h  DX12EditorRenderer.cpp  DX12EditorRenderer.h  DX12GameRenderer.cpp  DX12GameRenderer.h  DX12GraphicsBuffer.cpp  DX12GraphicsBuffer.h  DX12GraphicsContext.cpp  DX12GraphicsContext.h  DX12GraphicsProvider.cpp  DX12GraphicsProvider.h  DX12PipelineStateBuilder.cpp  DX12PipelineStateBuilder.h  DX12ShaderCompiler.cpp  DX12ShaderCompiler.h
Engine/Core/Renderers/Editor/: DX12EditorRenderer.cpp  DX12EditorRenderer.h
Engine/Core/Renderers/Game/: DX12GameRenderer.h
Engine/Core/Renderers/Vulkan/: VulkanCommon.cpp  VulkanCommon.h  VulkanEditorRenderer.cpp  VulkanEditorRenderer.h  VulkanGameRenderer.cpp  VulkanGameRenderer.h  VulkanGraphicsBuffer.cpp  VulkanGraphicsBuffer.h  VulkanGraphicsContext.cpp  VulkanGraphicsContext.h  VulkanGraphicsProvider.cpp  VulkanGraphicsProvider.h  VulkanPipelineStateBuilder.cpp  VulkanPipelineStateBuilder.h  VulkanRenderCore.cpp  VulkanRenderCore.h  VulkanShaderCompiler.cpp  VulkanShaderCompiler.h  VulkanView.cpp  VulkanView.h
Engine/Core/Scene/: Scene.cpp  Scene.h
Engine/Core/Serialization/: Json.cpp  Json.h  SceneSerializer.cpp  SceneSerializer.h
Engine/Core/Shaders/: Grid.hlsl  Grid.hlsl.PSMain.spv  Object.hlsl  Object.hlsl.PSMain.spv  Object.hlsl.VSMain.spv
Engine/Core/Shaders/Grid/: Grid.hlsl  Grid.hlsl.PSMain.spv  Grid.hlsl.VSMain.spv
Engine/Core/Shaders/Object/: Object.hlsl.PSMain.spv
Engine/Editor/: EditorState.cpp  EditorState.h  EditorUI.cpp  EditorUI.h  GameBuildManager.cpp  GameBuildManager.h  Main.cpp  ProjectLauncher.cpp  ProjectLauncher.h
Engine/Editor/Core/View/: IEditorPanel.h  View.cpp  View.h  ViewFactory.cpp  ViewFactory.h
Engine/Editor/Core/View/Views/: AssetsExplorerView.cpp  AssetsExplorerView.h  ConsoleView.cpp  ConsoleView.h  GameView.cpp  GameView.h  Hierarchy.h  HierarchyView.cpp  HierarchyView.h  PreferencesView.cpp  PreferencesView.h  PropertiesView.cpp  PropertiesView.h  SceneView.cpp  SceneView.h  SceneViewport.cpp  SceneViewport.h
Engine/Editor/Scene/: SceneViewport.cpp  SceneViewport.h
Engine/Editor/UI/: EditorLayout.cpp  EditorLayout.h  IEditorUi.h  IEditorUiBackend.h  SwitchableEditorUiBackend.cpp  SwitchableEditorUiBackend.h
Engine/Editor/UI/ImGui/: EditorUI.cpp  EditorUI.h  ImGuiEditorUi.cpp  ImGuiEditorUi.h  ImGuiUiBackend.cpp  ImGuiUiBackend.h
Engine/Editor/UI/Nuklear/: NuklearCore.c  NuklearEditorUi.cpp  NuklearEditorUi.h  NuklearUiBackend.cpp  NuklearUiBackend.h
Engine/Game/: Main.cpp
Engine/Renderers/Editor/: DX12EditorRenderer.cpp  DX12EditorRenderer.h
Engine/Renderers/Game/: DX12GameRenderer.cpp  DX12GameRenderer.h
Game/: Main.cpp
ProjectTemplate/: CMakeLists.txt.in  Project.proj.in  gitignore.in  tasks.json.in
cmake/: CreateRootSolution.cmake
